@@ -1,6 +1,9 @@
 6.001 - Work around https://github.com/Perl/perl5/issues/18606 to
         allow Hsearch to be called from Hreplace callbacks.
         Recursive substitution is caught and throws.
+
+        Add Hclean_for_cloning() to remove 'rsid' styles from LibreOffice
+        which interfere with cloning.
          
 6.000 - A major overhaul with incompatible API changes.
 
